--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "make test"
+    "start": "webpack-dev-server --host 0.0.0.0 --content-base ."
   },
   "dependencies": {
     "htmlparser2": "3.9.0",
