--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "./src/index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
     "start": "webpack-dev-server --host 0.0.0.0 --content-base ."
   },
   "dependencies": {
