--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tap": "5.7.1",
     "travis-after-all": "1.4.4",
     "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1"
+    "webpack-dev-server": "1.14.1",
+    "jszip": "3.1.3"
   }
 }
