--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "lodash.defaultsdeep": "4.6.0",
     "minilog": "3.1.0",
     "promise": "7.1.1",
-    "scratch-audio": "latest",
-    "scratch-blocks": "latest",
-    "scratch-render": "latest",
+    "scratch-audio": "^0.1.0-prerelease.0",
+    "scratch-blocks": "^0.1.0-prerelease.0",
+    "scratch-render": "^0.1.0-prerelease.0",
     "scratch-storage": "^0.2.0",
     "script-loader": "0.7.0",
     "socket.io-client": "1.7.3",
