--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "stats.js": "^0.17.0",
     "tap": "^10.2.0",
     "tiny-worker": "^2.1.1",
+    "url-loader": "^0.6.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.1",
     "worker-loader": "0.8.1"
