--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "webpack --progress --colors --bail",
     "coverage": "tap ./test/{unit,integration}/*.js --coverage --coverage-report=lcov",
     "deploy": "touch playground/.nojekyll && gh-pages -t -d playground -m \"Build for $(git log --pretty=format:%H -n1)\"",
-    "extract:pen": "format-message extract --out-file translations/pen/en.json src/blocks/scratch3_pen.js ",
-    "i18n:src": "extract:pen",
+    "extract:pen": "mkdirp translations/pen && format-message extract --out-file translations/pen/en.json src/blocks/scratch3_pen.js ",
+    "i18n:src": "npm run extract:pen",
     "lint": "eslint . && format-message lint src/**/*.js",
     "prepublish": "in-publish && npm run build || not-in-publish",
     "start": "webpack-dev-server",
@@ -40,6 +40,7 @@
     "eslint-config-scratch": "^5.0.0",
     "expose-loader": "0.7.4",
     "format-message": "5.2.1",
+    "format-message-cli": "5.2.1",
     "gh-pages": "^1.1.0",
     "highlightjs": "^9.8.0",
     "htmlparser2": "3.9.2",
