--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "webpack --progress --colors --bail",
     "coverage": "tap ./test/{unit,integration}/*.js --coverage --coverage-report=lcov",
     "deploy": "touch playground/.nojekyll && gh-pages -t -d playground -m \"Build for $(git log --pretty=format:%H -n1)\"",
-    "extract:pen": "mkdirp translations/pen && format-message extract --out-file translations/pen/en.json src/blocks/scratch3_pen.js ",
+    "extract:pen": "mkdirp translations/pen && format-message extract --out-file translations/pen/en.json src/extensions/scratch3_pen/index.js",
     "i18n:src": "npm run extract:pen",
     "lint": "eslint . && format-message lint src/**/*.js",
     "prepublish": "in-publish && npm run build || not-in-publish",
