--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "scratch-blocks": "latest",
     "scratch-render": "latest",
     "scratch-storage": "^0.4.0",
+    "scratch-parser": "latest",
     "script-loader": "0.7.2",
     "socket.io-client": "2.0.4",
     "stats.js": "^0.17.0",
