--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   },
   "devDependencies": {
     "adm-zip": "0.4.7",
-    "arraybuffer-loader": "^1.0.3",
+    "arraybuffer-loader": "^1.0.4",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "canvas-toBlob": "1.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "decode-html": "2.0.0",
@@ -56,18 +56,18 @@
     "nets": "3.2.0",
     "pngjs": "^3.3.2",
     "promise": "8.0.1",
-    "scratch-audio": "latest",
-    "scratch-blocks": "latest",
+    "scratch-audio": "0.1.0-prerelease.1525799078",
+    "scratch-blocks": "0.1.0-prerelease.1526482649",
     "scratch-parser": "4.1.1",
-    "scratch-render": "latest",
+    "scratch-render": "0.1.0-prerelease.20180514172756",
     "scratch-storage": "^0.4.0",
     "script-loader": "0.7.2",
     "socket.io-client": "2.0.4",
     "stats.js": "^0.17.0",
-    "tap": "^11.0.1",
+    "tap": "^11.1.5",
     "text-encoding": "0.6.4",
     "tiny-worker": "^2.1.1",
-    "webpack": "^4.8.0",
+    "webpack": "^4.8.3",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
     "worker-loader": "^1.1.1"
