--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
     "worker-loader": "^1.1.1"
+  },
+  "dependencies": {
+    "scratch-translate-extension-languages": "0.0.20180516171705"
   }
 }
