--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "scratch-parser": "4.1.1",
     "scratch-render": "0.1.0-prerelease.20180514172756",
     "scratch-storage": "^0.4.0",
+    "scratch-translate-extension-languages": "0.0.20180521154850",
     "script-loader": "0.7.2",
     "socket.io-client": "2.0.4",
     "stats.js": "^0.17.0",
@@ -71,8 +72,5 @@
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
     "worker-loader": "^1.1.1"
-  },
-  "dependencies": {
-    "scratch-translate-extension-languages": "0.0.20180516171705"
   }
 }
