--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ cache:
   - $HOME/.npm
 install:
 - ls -la node_modules | true
-- npm --production=false install --verbose
-- npm --production=false update --verbose
+- npm --production=false install
+- npm --production=false update
 - ls -la node_modules | true
 script: npm run $NPM_SCRIPT
 jobs:
